@@ -10,7 +10,11 @@
   (and recomposed) into an ~Ext~.
 - Added ~Data.Ratio.Generalized~ that implements Ratio but supports
   types that are not ~Integral~.
+- A ~Data.RealNumber.Symbolic~ type that represents numbers with a
+  symbolic pertubation. Useful for Simulation of Simplicity.
 - Dropped the ~CanAquire~ module.
+- Explicit export list for ~Data.Permutation~.
+- Added the ~Data.Sign~ and ~Data.Indexed~ modules.
 
 ** 0.14
 
